# learn_opengl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  readme.md  winbuild.bat
include/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  stb_image.h  texture.hpp
shaders/basic/: lightSource.frag  shader.frag  shader.vert
shaders/lighting/: light.frag  light.vert
shaders/model/: model.frag  model.vert
shaders/texture/: basic.frag  basic.vert  depth.frag  stencil.frag
src/: main.cpp  mesh.cpp  model.cpp  texture.cpp
